# netwatch

./: Cargo.toml  README.md
netwatch/: Cargo.toml  build.rs
netwatch-common/: Cargo.toml
netwatch-common/src/: lib.rs
netwatch-ebpf/: Cargo.toml
netwatch-ebpf/src/: event.rs  main.rs
netwatch/src/: detail_event.rs  main.rs  view.rs
